Removes several redundant classes.
Refs #59791