@@ -18,7 +18,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.TimeZone;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import com.zaxxer.hikari.HikariDataSource;
@@ -36,7 +35,6 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import wres.datamodel.time.TimeSeriesMetadata;
-import wres.io.concurrency.Executor;
 import wres.config.generated.DataSourceBaselineConfig;
 import wres.config.generated.DataSourceConfig;
 import wres.config.generated.DatasourceType;
@@ -78,8 +76,6 @@ public class SingleValuedRetrieverFactoryTest
     @Mock
     private SystemSettings mockSystemSettings;
     private wres.io.database.Database wresDatabase;
-    @Mock
-    private Executor mockExecutor;
     @Mock
     private ProjectConfig mockProjectConfig;
     private DatabaseCaches caches;
@@ -154,7 +150,7 @@ public class SingleValuedRetrieverFactoryTest
         // Get the actual left series
         List<TimeSeries<Double>> actualCollection = this.factoryToTest.getLeftRetriever( Set.of( FEATURE ) )
                                                                       .get()
-                                                                      .collect( Collectors.toList() );
+                                                                      .toList();
 
         // There is only one time-series, so assert that
         assertEquals( 1, actualCollection.size() );
@@ -199,7 +195,7 @@ public class SingleValuedRetrieverFactoryTest
         List<TimeSeries<Double>> actualCollection = this.factoryToTest.getLeftRetriever( Set.of( FEATURE ),
                                                                                          timeWindow )
                                                                       .get()
-                                                                      .collect( Collectors.toList() );
+                                                                      .toList();
 
         // There is only one time-series, so assert that
         assertEquals( 1, actualCollection.size() );
@@ -241,7 +237,7 @@ public class SingleValuedRetrieverFactoryTest
         List<TimeSeries<Double>> actualCollection = this.factoryToTest.getRightRetriever( Set.of( FEATURE ),
                                                                                           timeWindow )
                                                                       .get()
-                                                                      .collect( Collectors.toList() );
+                                                                      .toList();
 
         // There is only one time-series, so assert that
         assertEquals( 1, actualCollection.size() );
@@ -282,7 +278,7 @@ public class SingleValuedRetrieverFactoryTest
         List<TimeSeries<Double>> actualCollection = this.factoryToTest.getBaselineRetriever( Set.of( FEATURE ),
                                                                                              timeWindow )
                                                                       .get()
-                                                                      .collect( Collectors.toList() );
+                                                                      .toList();
 
         // There is only one time-series, so assert that
         assertEquals( 1, actualCollection.size() );
@@ -426,7 +422,7 @@ public class SingleValuedRetrieverFactoryTest
     /**
      * Performs the detailed set-up work to add one time-series to the database. Some assertions are made here, which
      * could fail, in order to clarify the source of a failure.
-     * 
+     *
      * @throws SQLException if the detailed set-up fails
      */
 
@@ -443,7 +439,9 @@ public class SingleValuedRetrieverFactoryTest
         PairConfig pairConfig = new PairConfig( null,
                                                 null,
                                                 null,
-                                                List.of( new NamedFeature( FEATURE.getName(), FEATURE.getName(), null ) ),
+                                                List.of( new NamedFeature( FEATURE.getName(),
+                                                                           FEATURE.getName(),
+                                                                           null ) ),
                                                 null,
                                                 null,
                                                 null,
